tests/snapshots/examples_fixtures/io__aoc_day3_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day3_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `best_with_digit`.

  --> examples/io/aoc_day3_haskell_style.flx:22:5
   |
22 |     best_with_digit(line, start_idx, k, 9)
   |     ^^^^^^^^^^^^^^^

Hint:
  Define it first: let best_with_digit = ...;


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `try_occurrences`.

  --> examples/io/aoc_day3_haskell_style.flx:32:11
   |
32 |     match try_occurrences(line, digit_str, first_pos, k) {
   |           ^^^^^^^^^^^^^^^

Hint:
  Define it first: let try_occurrences = ...;


--> compiler error[E300]: TYPE UNIFICATION ERROR

The branches of this `if` expression produce different types.

  --> examples/io/aoc_day3_haskell_style.flx:58:5
   |
56 |         Some(0)

   |         ------- `then` branch returns `Int`
57 |     } else {

58 |     match best_number_string(cleaned, 0, n) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
59 |         Some(s) -> Some(parse_int(s)),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
60 |         _ -> None
   | ^^^^^^^^^^^^^^^^^
61 |     }
   | ^^^^^

Help:
  Both branches must return the same type. Change one branch to match `Int` or `Option<Int>`.


--> compiler error[E400]: MISSING EFFECT

Call to `read_lines` requires effect `IO` in this function signature.

  --> examples/io/aoc_day3_haskell_style.flx:78:30
   |
78 |     match sum_values(to_list(read_lines(path)), n, 0) {
   |                              ^^^^^^^^^^
   |                              ---------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.

Found 4 errors.
== stdout ==
<not executed>
